Kubernetes/acts-triton-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: acts-triton-svc
  name: acts-triton-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: api
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: grpc
    port: 8001
    protocol: TCP
    targetPort: 8001
  - name: metrics
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    k8s-app: acts-triton-build
  type: ClusterIP
