Kubernetes/acts-triton-ingress-v1.yaml
# This is the ingress setting for the acts-triton service.
# This v1 version can be used to test the http protocol.
# grpc does not work with this version.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/use-htx: "true"
    ingress.kubernetes.io/backend-protocol: h2
  name: acts-triton-ingress
spec:
  rules:
  - host: acts-triton.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: acts-triton-svc
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: acts-triton-svc
            port:
              number: 8001
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: acts-triton-svc
            port:
              number: 8002
        path: /metrics
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - acts-triton.nrp-nautilus.io
