Kubernetes/acts-triton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: acts-triton-ingress
spec:
  rules:
  - host: acts-triton.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: acts-triton-svc
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: acts-triton-svc
            port:
              number: 8001
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: acts-triton-svc
            port:
              number: 8002
        path: /metrics
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - acts-triton.nrp-nautilus.io
